// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keywords.ts [babel-ts] format 1`] = `
"Unexpected token, expected \\"{\\" (9:12)
   7 |
   8 |     // Apparently this parses :P
>  9 |     export private public protected static readonly abstract async enum X { }
     |            ^
  10 |
  11 |     interface x {
  12 |         export private static readonly [x: any]: any;"
`;

exports[`keywords.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// All of these should be an error

module Y3 {
    public module Module {
        class A { s: string }
    }

    // Apparently this parses :P
    export private public protected static readonly abstract async enum X { }

    interface x {
        export private static readonly [x: any]: any;
    }
}

module Y4 {
    public enum Color { Blue, Red }
}

module YY3 {
    private module Module {
        class A { s: string }
    }
}

module YY4 {
    private enum Color { Blue, Red }
}

module YYY3 {
    static module Module {
        class A { s: string }
    }
}

module YYY4 {
    static enum Color { Blue, Red }
}

=====================================output=====================================
// All of these should be an error

module Y3 {
  public module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
  export private public protected static readonly abstract async enum X {}

  interface x {
    export private static readonly [x: any]: any;
  }
}

module Y4 {
  public enum Color {
    Blue,
    Red,
  }
}

module YY3 {
  private module Module {
    class A {
      s: string;
    }
  }
}

module YY4 {
  private enum Color {
    Blue,
    Red,
  }
}

module YYY3 {
  static module Module {
    class A {
      s: string;
    }
  }
}

module YYY4 {
  static enum Color {
    Blue,
    Red,
  }
}

================================================================================
`;

exports[`keywords-2.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/12356

class C {
  private *a() {}
  public *b() {}
  static *c() {}
  protected *g() {}
}

class D {
  declare<T>() {}
  readonly<T>() {}
  abstract<T>() {}
  static<T>() {}
  private<T>() {}
  public<T>() {}
  protected<T>() {}
}

class E {
  public
  private() {}
}

class Foo {
  constructor(private, public, static) {
  }
}

class F {
    constructor(public []) {}
}
class G {
    constructor(public {}) {}
}

=====================================output=====================================
// https://github.com/babel/babel/pull/12356

class C {
  private *a() {}
  public *b() {}
  static *c() {}
  protected *g() {}
}

class D {
  declare<T>() {}
  readonly<T>() {}
  abstract<T>() {}
  static<T>() {}
  private<T>() {}
  public<T>() {}
  protected<T>() {}
}

class E {
  public;
  private() {}
}

class Foo {
  constructor(private, public, static) {}
}

class F {
  constructor(public []) {}
}
class G {
  constructor(public {}) {}
}

================================================================================
`;

exports[`module.ts [babel-ts] format 1`] = `
"Unexpected token, expected \\"{\\" (7:10)
   5 |
   6 |   // Apparently this parses :P
>  7 |   export private public protected static readonly abstract async enum X { }
     |          ^
   8 |
   9 |   interface x {
  10 |       export private static readonly [x: any]: any;"
`;

exports[`module.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module Y3 {
  public module Module {
      class A { s: string }
  }

  // Apparently this parses :P
  export private public protected static readonly abstract async enum X { }

  interface x {
      export private static readonly [x: any]: any;
  }
}

=====================================output=====================================
module Y3 {
  public module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
  export private public protected static readonly abstract async enum X {}

  interface x {
    export private static readonly [x: any]: any;
  }
}

================================================================================
`;
